# spotify-api-plusplus

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  SpotifyAPI.cpp  SpotifyAPI.h
src/models/: Album.h  AlbumSimple.h  Artist.h  ArtistSimple.h  AudioFeatures.h  Category.h  Context.h  Copyright.h  CurrentlyPlayingContext.h  CurrentlyPlayingTrack.h  Cursor.h  CursorPager.h  Device.h  Error.h  Followers.h  Image.h  Pager.h  PlayHistoryObject.h  Playlist.h  PlaylistSimple.h  PlaylistTrack.h  Recommendations.h  RecommendationsSeed.h  SavedAlbum.h  SavedTrack.h  Track.h  TrackLink.h  TrackSimple.h  User.h  UserPublic.h
src/utils/: CurlException.h  CurlUtils.h  Timer.h
